# communicate_assignment

./: Cargo.toml  README.md
biz/: Cargo.toml
biz/src/: lib.rs  main.rs  tests.rs
custom/: Cargo.toml
custom/src/: base.rs  lib.rs  machine.rs  node.rs  relayer.rs
frame/: Cargo.toml
frame/client/: Cargo.toml
frame/client/src/: lib.rs  tests.rs
frame/common/: Cargo.toml
frame/common/src/: data.rs  lib.rs
frame/relayer/: Cargo.toml
frame/relayer/src/: lib.rs  tests.rs
src/: main.rs
