[package]
edition = "2021"
name = "biz"
version = "0.1.0"

[[bin]]
name = "biz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = {version = "0.1.0", path = "../frame/client"}
common = {version = "0.1.0", path = "../frame/common"}
lazy_static = "1.4.0"
regex = "1.5.4"
relayer = {version = "0.1.0", path = "../frame/relayer"}
custom = {version = "0.1.0", path = "../custom"}
threadpool = "1.8.1"
tokio = {version = "1", features = ["full"]}
log = "0.4.14"
