[package]
name = "frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-common = { version = "0.1.0", path = "common" }
frame-relayer = { version = "0.1.0", path = "relayer" }
frame-client = { version = "0.1.0", path = "client" }
