[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.135", features = ["derive"]}
serde_json = {version = "1.0.78", default-features = false, features = ["alloc"]}
log = "0.4.14"
